--- a/workspaceRos/src/maestro_node/CMakeLists.txt
+++ b/workspaceRos/src/maestro_node/CMakeLists.txt
@@ -4,7 +4,12 @@ project(maestro_node)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs tf message_generation)
+find_package(catkin REQUIRED COMPONENTS 
+			roscpp 
+			std_msgs 
+			tf 
+			message_generation
+			)
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system thread)
@@ -20,11 +25,12 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 #######################################
 
 ## Generate messages in the 'msg' folder
-#add_message_files(
-#  FILES
+add_message_files(
+  FILES
+  Command.msg
 #  Servo.msg
 #   Message2.msg
-#)
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -34,10 +40,10 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-#generate_messages(
-#  DEPENDENCIES
-#  std_msgs
-#)
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -51,7 +57,7 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 catkin_package(
  INCLUDE_DIRS include
 #  LIBRARIES maestro_node
- CATKIN_DEPENDS roscpp std_msgs
+ CATKIN_DEPENDS roscpp std_msgs message_runtime
 #  DEPENDS system_lib
 )
 
